// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckBoxGroup custom theme 1`] = `
<div
  class="StyledGrommet-sc-u9ttri-0 khiswu"
>
  <div
    class="StyledBox-sc-17m3pep-0 bHTZAl StyledCheckBoxGroup-sc-ajgvp2-0"
    role="group"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-18oysf7-1 kAOyai"
      label="first-label"
    >
      <div
        class="StyledBox-sc-17m3pep-0 kfcDJe StyledCheckBox-sc-18oysf7-6 eGtmFg"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-18oysf7-2 ldfCwu"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-17m3pep-0 fIUczV StyledCheckBox__StyledCheckBoxBox-sc-18oysf7-3 bBzOXO"
        />
      </div>
      <span>
        first-label
      </span>
    </label>
    <div
      class="StyledBox__StyledBoxGap-sc-17m3pep-1 BrMNF"
    />
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-18oysf7-1 kAOyai"
      label="second-label"
    >
      <div
        class="StyledBox-sc-17m3pep-0 kfcDJe StyledCheckBox-sc-18oysf7-6 eGtmFg"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-18oysf7-2 ldfCwu"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-17m3pep-0 fIUczV StyledCheckBox__StyledCheckBoxBox-sc-18oysf7-3 bBzOXO"
        />
      </div>
      <span>
        second-label
      </span>
    </label>
  </div>
</div>
`;

exports[`CheckBoxGroup defaultValue renders 1`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-u9ttri-0 khiswu"
  >
    <div
      class="StyledBox-sc-17m3pep-0 eULlfz StyledCheckBoxGroup-sc-ajgvp2-0"
      role="group"
    >
      <label
        class="StyledCheckBox__StyledCheckBoxContainer-sc-18oysf7-1 kAOyai"
        label="First"
      >
        <div
          class="StyledBox-sc-17m3pep-0 kfcDJe StyledCheckBox-sc-18oysf7-6 eGtmFg"
        >
          <input
            checked=""
            class="StyledCheckBox__StyledCheckBoxInput-sc-18oysf7-2 ldfCwu"
            type="checkbox"
          />
          <div
            class="StyledBox-sc-17m3pep-0 iAQBLV StyledCheckBox__StyledCheckBoxBox-sc-18oysf7-3 bBzOXO"
          >
            <svg
              class="StyledCheckBox__StyledCheckBoxIcon-sc-18oysf7-0 hntjEq"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 24 24"
            >
              <path
                d="M6,11.3 L10.3,16 L18,6.2"
                fill="none"
              />
            </svg>
          </div>
        </div>
        <span>
          First
        </span>
      </label>
      <div
        class="StyledBox__StyledBoxGap-sc-17m3pep-1 iedZbW"
      />
      <label
        class="StyledCheckBox__StyledCheckBoxContainer-sc-18oysf7-1 kAOyai"
        label="Second"
      >
        <div
          class="StyledBox-sc-17m3pep-0 kfcDJe StyledCheckBox-sc-18oysf7-6 eGtmFg"
        >
          <input
            class="StyledCheckBox__StyledCheckBoxInput-sc-18oysf7-2 ldfCwu"
            type="checkbox"
          />
          <div
            class="StyledBox-sc-17m3pep-0 fIUczV StyledCheckBox__StyledCheckBoxBox-sc-18oysf7-3 bBzOXO"
          />
        </div>
        <span>
          Second
        </span>
      </label>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CheckBoxGroup disabled renders 1`] = `
<div
  class="StyledGrommet-sc-u9ttri-0 khiswu"
>
  <div
    class="StyledBox-sc-17m3pep-0 eULlfz StyledCheckBoxGroup-sc-ajgvp2-0"
    role="group"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-18oysf7-1 htFzwz"
      disabled=""
      label="First"
    >
      <div
        class="StyledBox-sc-17m3pep-0 kfcDJe StyledCheckBox-sc-18oysf7-6 eGtmFg"
        disabled=""
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-18oysf7-2 lfMWDy"
          disabled=""
          type="checkbox"
        />
        <div
          class="StyledBox-sc-17m3pep-0 fIUczV StyledCheckBox__StyledCheckBoxBox-sc-18oysf7-3 bBzOXO"
          disabled=""
        />
      </div>
      <span>
        First
      </span>
    </label>
    <div
      class="StyledBox__StyledBoxGap-sc-17m3pep-1 iedZbW"
    />
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-18oysf7-1 htFzwz"
      disabled=""
      label="Second"
    >
      <div
        class="StyledBox-sc-17m3pep-0 kfcDJe StyledCheckBox-sc-18oysf7-6 eGtmFg"
        disabled=""
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-18oysf7-2 lfMWDy"
          disabled=""
          type="checkbox"
        />
        <div
          class="StyledBox-sc-17m3pep-0 fIUczV StyledCheckBox__StyledCheckBoxBox-sc-18oysf7-3 bBzOXO"
          disabled=""
        />
      </div>
      <span>
        Second
      </span>
    </label>
  </div>
  <div
    class="StyledBox-sc-17m3pep-0 eULlfz StyledCheckBoxGroup-sc-ajgvp2-0"
    role="group"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-18oysf7-1 htFzwz"
      disabled=""
      label="First"
    >
      <div
        class="StyledBox-sc-17m3pep-0 kfcDJe StyledCheckBox-sc-18oysf7-6 eGtmFg"
        disabled=""
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-18oysf7-2 lfMWDy"
          disabled=""
          type="checkbox"
        />
        <div
          class="StyledBox-sc-17m3pep-0 fIUczV StyledCheckBox__StyledCheckBoxBox-sc-18oysf7-3 bBzOXO"
          disabled=""
        />
      </div>
      <span>
        First
      </span>
    </label>
  </div>
  <div
    class="StyledBox-sc-17m3pep-0 eULlfz StyledCheckBoxGroup-sc-ajgvp2-0"
    role="group"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-18oysf7-1 htFzwz"
      disabled=""
      label="First"
    >
      <div
        class="StyledBox-sc-17m3pep-0 kfcDJe StyledCheckBox-sc-18oysf7-6 eGtmFg"
        disabled=""
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-18oysf7-2 lfMWDy"
          disabled=""
          type="checkbox"
        />
        <div
          class="StyledBox-sc-17m3pep-0 fIUczV StyledCheckBox__StyledCheckBoxBox-sc-18oysf7-3 bBzOXO"
          disabled=""
        />
      </div>
      <span>
        First
      </span>
    </label>
  </div>
</div>
`;

exports[`CheckBoxGroup initial value renders 1`] = `
<div
  class="StyledGrommet-sc-u9ttri-0 khiswu"
>
  <div
    class="StyledBox-sc-17m3pep-0 eULlfz StyledCheckBoxGroup-sc-ajgvp2-0"
    role="group"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-18oysf7-1 kAOyai"
      label="Maui"
    >
      <div
        class="StyledBox-sc-17m3pep-0 kfcDJe StyledCheckBox-sc-18oysf7-6 eGtmFg"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-18oysf7-2 ldfCwu"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-17m3pep-0 fIUczV StyledCheckBox__StyledCheckBoxBox-sc-18oysf7-3 bBzOXO"
        />
      </div>
      <span>
        Maui
      </span>
    </label>
    <div
      class="StyledBox__StyledBoxGap-sc-17m3pep-1 iedZbW"
    />
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-18oysf7-1 kAOyai"
      label="Jerusalem"
    >
      <div
        class="StyledBox-sc-17m3pep-0 kfcDJe StyledCheckBox-sc-18oysf7-6 eGtmFg"
      >
        <input
          checked=""
          class="StyledCheckBox__StyledCheckBoxInput-sc-18oysf7-2 ldfCwu"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-17m3pep-0 iAQBLV StyledCheckBox__StyledCheckBoxBox-sc-18oysf7-3 bBzOXO"
        >
          <svg
            class="StyledCheckBox__StyledCheckBoxIcon-sc-18oysf7-0 hntjEq"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 24 24"
          >
            <path
              d="M6,11.3 L10.3,16 L18,6.2"
              fill="none"
            />
          </svg>
        </div>
      </div>
      <span>
        Jerusalem
      </span>
    </label>
    <div
      class="StyledBox__StyledBoxGap-sc-17m3pep-1 iedZbW"
    />
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-18oysf7-1 kAOyai"
      label="Wuhan"
    >
      <div
        class="StyledBox-sc-17m3pep-0 kfcDJe StyledCheckBox-sc-18oysf7-6 eGtmFg"
      >
        <input
          checked=""
          class="StyledCheckBox__StyledCheckBoxInput-sc-18oysf7-2 ldfCwu"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-17m3pep-0 iAQBLV StyledCheckBox__StyledCheckBoxBox-sc-18oysf7-3 bBzOXO"
        >
          <svg
            class="StyledCheckBox__StyledCheckBoxIcon-sc-18oysf7-0 hntjEq"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 24 24"
          >
            <path
              d="M6,11.3 L10.3,16 L18,6.2"
              fill="none"
            />
          </svg>
        </div>
      </div>
      <span>
        Wuhan
      </span>
    </label>
  </div>
</div>
`;

exports[`CheckBoxGroup labelKey 1`] = `
<div
  class="StyledGrommet-sc-u9ttri-0 khiswu"
>
  <div
    class="StyledBox-sc-17m3pep-0 eULlfz StyledCheckBoxGroup-sc-ajgvp2-0"
    role="group"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-18oysf7-1 kAOyai"
      label="first-label"
    >
      <div
        class="StyledBox-sc-17m3pep-0 kfcDJe StyledCheckBox-sc-18oysf7-6 eGtmFg"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-18oysf7-2 ldfCwu"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-17m3pep-0 fIUczV StyledCheckBox__StyledCheckBoxBox-sc-18oysf7-3 bBzOXO"
        />
      </div>
      <span>
        first-label
      </span>
    </label>
    <div
      class="StyledBox__StyledBoxGap-sc-17m3pep-1 iedZbW"
    />
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-18oysf7-1 kAOyai"
      label="second-label"
    >
      <div
        class="StyledBox-sc-17m3pep-0 kfcDJe StyledCheckBox-sc-18oysf7-6 eGtmFg"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-18oysf7-2 ldfCwu"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-17m3pep-0 fIUczV StyledCheckBox__StyledCheckBoxBox-sc-18oysf7-3 bBzOXO"
        />
      </div>
      <span>
        second-label
      </span>
    </label>
  </div>
</div>
`;

exports[`CheckBoxGroup onChange 1`] = `
<div
  class="StyledGrommet-sc-u9ttri-0 khiswu"
>
  <div
    class="StyledBox-sc-17m3pep-0 eULlfz StyledCheckBoxGroup-sc-ajgvp2-0"
    role="group"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-18oysf7-1 kAOyai"
      label="first-label"
    >
      <div
        class="StyledBox-sc-17m3pep-0 kfcDJe StyledCheckBox-sc-18oysf7-6 eGtmFg"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-18oysf7-2 ldfCwu"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-17m3pep-0 iAQBLV StyledCheckBox__StyledCheckBoxBox-sc-18oysf7-3 bBzOXO"
        >
          <svg
            class="StyledCheckBox__StyledCheckBoxIcon-sc-18oysf7-0 hntjEq"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 24 24"
          >
            <path
              d="M6,11.3 L10.3,16 L18,6.2"
              fill="none"
            />
          </svg>
        </div>
      </div>
      <span>
        first-label
      </span>
    </label>
    <div
      class="StyledBox__StyledBoxGap-sc-17m3pep-1 iedZbW"
    />
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-18oysf7-1 kAOyai"
      label="second-label"
    >
      <div
        class="StyledBox-sc-17m3pep-0 kfcDJe StyledCheckBox-sc-18oysf7-6 eGtmFg"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-18oysf7-2 ldfCwu"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-17m3pep-0 fIUczV StyledCheckBox__StyledCheckBoxBox-sc-18oysf7-3 bBzOXO"
        />
      </div>
      <span>
        second-label
      </span>
    </label>
  </div>
</div>
`;

exports[`CheckBoxGroup onClick for check and uncheck a CheckBox 1`] = `
<div
  class="StyledGrommet-sc-u9ttri-0 khiswu"
>
  <div
    class="StyledBox-sc-17m3pep-0 ezAXtv StyledCheckBoxGroup-sc-ajgvp2-0"
    role="group"
    tabindex="0"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-18oysf7-1 kAOyai"
      label="first-label"
    >
      <div
        class="StyledBox-sc-17m3pep-0 kfcDJe StyledCheckBox-sc-18oysf7-6 eGtmFg"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-18oysf7-2 ldfCwu"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-17m3pep-0 iAQBLV StyledCheckBox__StyledCheckBoxBox-sc-18oysf7-3 bBzOXO"
        >
          <svg
            class="StyledCheckBox__StyledCheckBoxIcon-sc-18oysf7-0 hntjEq"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 24 24"
          >
            <path
              d="M6,11.3 L10.3,16 L18,6.2"
              fill="none"
            />
          </svg>
        </div>
      </div>
      <span>
        first-label
      </span>
    </label>
    <div
      class="StyledBox__StyledBoxGap-sc-17m3pep-1 iedZbW"
    />
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-18oysf7-1 kAOyai"
      label="second-label"
    >
      <div
        class="StyledBox-sc-17m3pep-0 kfcDJe StyledCheckBox-sc-18oysf7-6 eGtmFg"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-18oysf7-2 ldfCwu"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-17m3pep-0 fIUczV StyledCheckBox__StyledCheckBoxBox-sc-18oysf7-3 bBzOXO"
        />
      </div>
      <span>
        second-label
      </span>
    </label>
  </div>
</div>
`;

exports[`CheckBoxGroup onClick for check and uncheck a CheckBox 2`] = `
<div
  class="StyledGrommet-sc-u9ttri-0 khiswu"
>
  <div
    class="StyledBox-sc-17m3pep-0 ezAXtv StyledCheckBoxGroup-sc-ajgvp2-0"
    role="group"
    tabindex="0"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-18oysf7-1 kAOyai"
      label="first-label"
    >
      <div
        class="StyledBox-sc-17m3pep-0 kfcDJe StyledCheckBox-sc-18oysf7-6 eGtmFg"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-18oysf7-2 ldfCwu"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-17m3pep-0 fIUczV StyledCheckBox__StyledCheckBoxBox-sc-18oysf7-3 bBzOXO"
        />
      </div>
      <span>
        first-label
      </span>
    </label>
    <div
      class="StyledBox__StyledBoxGap-sc-17m3pep-1 iedZbW"
    />
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-18oysf7-1 kAOyai"
      label="second-label"
    >
      <div
        class="StyledBox-sc-17m3pep-0 kfcDJe StyledCheckBox-sc-18oysf7-6 eGtmFg"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-18oysf7-2 ldfCwu"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-17m3pep-0 fIUczV StyledCheckBox__StyledCheckBoxBox-sc-18oysf7-3 bBzOXO"
        />
      </div>
      <span>
        second-label
      </span>
    </label>
  </div>
</div>
`;

exports[`CheckBoxGroup options renders 1`] = `
<div
  class="StyledGrommet-sc-u9ttri-0 khiswu"
>
  <div
    class="StyledBox-sc-17m3pep-0 eULlfz StyledCheckBoxGroup-sc-ajgvp2-0"
    role="group"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-18oysf7-1 kAOyai"
      label="First"
    >
      <div
        class="StyledBox-sc-17m3pep-0 kfcDJe StyledCheckBox-sc-18oysf7-6 eGtmFg"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-18oysf7-2 ldfCwu"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-17m3pep-0 fIUczV StyledCheckBox__StyledCheckBoxBox-sc-18oysf7-3 bBzOXO"
        />
      </div>
      <span>
        First
      </span>
    </label>
    <div
      class="StyledBox__StyledBoxGap-sc-17m3pep-1 iedZbW"
    />
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-18oysf7-1 kAOyai"
      label="Second"
    >
      <div
        class="StyledBox-sc-17m3pep-0 kfcDJe StyledCheckBox-sc-18oysf7-6 eGtmFg"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-18oysf7-2 ldfCwu"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-17m3pep-0 fIUczV StyledCheckBox__StyledCheckBoxBox-sc-18oysf7-3 bBzOXO"
        />
      </div>
      <span>
        Second
      </span>
    </label>
  </div>
</div>
`;

exports[`CheckBoxGroup value renders 1`] = `
<div
  class="StyledGrommet-sc-u9ttri-0 khiswu"
>
  <div
    class="StyledBox-sc-17m3pep-0 eULlfz StyledCheckBoxGroup-sc-ajgvp2-0"
    role="group"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-18oysf7-1 kAOyai"
      label="First"
    >
      <div
        class="StyledBox-sc-17m3pep-0 kfcDJe StyledCheckBox-sc-18oysf7-6 eGtmFg"
      >
        <input
          checked=""
          class="StyledCheckBox__StyledCheckBoxInput-sc-18oysf7-2 ldfCwu"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-17m3pep-0 iAQBLV StyledCheckBox__StyledCheckBoxBox-sc-18oysf7-3 bBzOXO"
        >
          <svg
            class="StyledCheckBox__StyledCheckBoxIcon-sc-18oysf7-0 hntjEq"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 24 24"
          >
            <path
              d="M6,11.3 L10.3,16 L18,6.2"
              fill="none"
            />
          </svg>
        </div>
      </div>
      <span>
        First
      </span>
    </label>
    <div
      class="StyledBox__StyledBoxGap-sc-17m3pep-1 iedZbW"
    />
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-18oysf7-1 kAOyai"
      label="Second"
    >
      <div
        class="StyledBox-sc-17m3pep-0 kfcDJe StyledCheckBox-sc-18oysf7-6 eGtmFg"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-18oysf7-2 ldfCwu"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-17m3pep-0 fIUczV StyledCheckBox__StyledCheckBoxBox-sc-18oysf7-3 bBzOXO"
        />
      </div>
      <span>
        Second
      </span>
    </label>
  </div>
</div>
`;

exports[`CheckBoxGroup valueKey 1`] = `
<div
  class="StyledGrommet-sc-u9ttri-0 khiswu"
>
  <div
    class="StyledBox-sc-17m3pep-0 eULlfz StyledCheckBoxGroup-sc-ajgvp2-0"
    role="group"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-18oysf7-1 kAOyai"
      label="first-label"
    >
      <div
        class="StyledBox-sc-17m3pep-0 kfcDJe StyledCheckBox-sc-18oysf7-6 eGtmFg"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-18oysf7-2 ldfCwu"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-17m3pep-0 fIUczV StyledCheckBox__StyledCheckBoxBox-sc-18oysf7-3 bBzOXO"
        />
      </div>
      <span>
        first-label
      </span>
    </label>
    <div
      class="StyledBox__StyledBoxGap-sc-17m3pep-1 iedZbW"
    />
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-18oysf7-1 kAOyai"
      label="second-label"
    >
      <div
        class="StyledBox-sc-17m3pep-0 kfcDJe StyledCheckBox-sc-18oysf7-6 eGtmFg"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-18oysf7-2 ldfCwu"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-17m3pep-0 fIUczV StyledCheckBox__StyledCheckBoxBox-sc-18oysf7-3 bBzOXO"
        />
      </div>
      <span>
        second-label
      </span>
    </label>
  </div>
</div>
`;
